k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: server-deploymnet
spec:
  replicas: 1
  selector: 
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: letiendat152/devops-server
          ports:
            - containerPort: 4000
