k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: server-cluster-ip-service
spec:
  type: NodePort
  selector:
    component: server 
  ports:
    - port: 4000
      targetPort: 4000
      nodePort: 31000
